<resources>
    <string name="app_name">Journal App</string>
    <string name="save">Save</string>
    <string name="et_hint_title">Title</string>
    <string name="et_hint_content">Content</string>
    <string name="journal_app_label">Journal App</string>
    <string name="log_out">Log Out</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="tutorial_empty_list_prompt">You have an empty list, add your thoughts and ideas.</string>
    <string name="click_here">Click here.</string>
    <string name="for_all_those_great_ideas_and_thoughts_keep_them_safe_on_this_app">For all those great ideas and thoughts, keep them safe on this app.</string>
    <string name="content_label">Content</string>
    <string name="login_image_cover">login image cover.</string>
    <string name="accept">Accept</string>
</resources>
