<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditJournalActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_edit_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:title="Edit Journal"
        app:titleTextColor="@color/colorWhite">


    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/et_edit_journal_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_edit_toolbar"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/et_edit_journal_contents"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/content_label"
        android:inputType="textMultiLine"
        android:minLines="5"
        android:text="@string/content_label"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_edit_journal_title"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btn_edit_journal_save"
        style="@style/button_filled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:onClick="editSaveButtonClicked"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_edit_journal_cancel"
        style="@style/button_halo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:text="@string/cancel"
        android:onClick="editCancelButtonClicked"
        app:layout_constraintBottom_toBottomOf="@+id/btn_edit_journal_save"
        app:layout_constraintEnd_toStartOf="@+id/btn_edit_journal_save"
        app:layout_constraintTop_toTopOf="@+id/btn_edit_journal_save" />

</android.support.constraint.ConstraintLayout>